i think im on to something here bossssss

--- a/pokedex/pokedex/index.html
+++ b/pokedex/pokedex/index.html
@@ -1,8 +1,11 @@
 <html>
   <head>
-    <!-- Found thishttps://codepen.io/Bidji/pen/MYdPwo-->
+    <!-- Found this https://codepen.io/Bidji/pen/MYdPwo-->
     <!-- Link to our stylesheet! -->
     <link rel="stylesheet" href="style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.11/p5.js"></script>
+    <script src="sketch.js"></script>
+    <script src="sketch2.js"></script>
   </head>
   <body>
     <div id="pokedex">
@@ -29,9 +32,7 @@
             <div id="buttontopPicture1"></div>
             <div id="buttontopPicture2"></div>
           </div>
-          <div id="picture">
-            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/200653/psykokwak.gif" alt="psykokwak" height="170" />
-          </div>
+          <div id="picture"></div>
           <div id="buttonbottomPicture"></div>
           <div id="speakers">
             <div class="sp"></div>
@@ -62,14 +63,7 @@
         </div>
       </div>
       <div id="right">
-        <div id="stats">
-          <strong>Name :</strong> Psyduck<br/>
-          <strong>Type :</strong> Water<br/>
-          <strong>Height :</strong> 2'072''<br/>
-          <strong>Weight :</strong> 43.2 lbs.<br/><br/>
-          <strong>The duck Pokemon</strong><br/>
-          Uses mysterious powers to perform various attacks.
-        </div>
+        <div id="stats"></div>
         <div id="blueButtons1">
           <div class="blueButton"></div>
           <div class="blueButton"></div>
